--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <input id='opened' type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Already Opened</label>
         </div>
-        <button id='add' class="btn btn-primary">Add</button>
-        <button id='todata' class="btn btn-primary">See Expiration Dates</button>
-        <button id='scanbtn' class="btn btn-primary">Scan/Stop</button>
+        <button id='add' class="btn btn-info">Add</button>
+        <button id='todata' class="btn btn-info">See Expiration Dates</button>
+        <button id='scanbtn' class="btn btn-info">Scan/Stop</button>
         <div id="scanner-container"></div>
        
     </form>
