--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- <iframe src="https://www.barcodelookup.com/"></iframe> -->
    
-        <img id="coverphoto" src="https://images.pexels.com/photos/1099680/pexels-photo-1099680.jpeg?cs=srgb&dl=top-view-photo-of-food-dessert-1099680.jpg&fm=jpg"> 
+        <img id="coverphoto" src="coverphoto.jpg"> 
 
     
     </div>
