--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frigi-Track</title>
+    <link rel="logo" href="logo.jpg"/>
     
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="  https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
@@ -28,6 +29,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark">
             <!-- brand icon -->
+            <img id="logo" src="logo.jpg" style="width: 40px;">
             <h3><a class="navbar-brand" href="/">Frigi-Track</a></h3>
 
             <!-- Collapse toggle button -->
