--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </span>
 
                 <div class="search-container">
-                    <form action="/action_page.php">
+                    <form>
                         <input type="text" placeholder="Search your food" name="search">
                         <button type="submit"><i class="fa fa-search"></i></button>
                     </form>
@@ -137,7 +137,6 @@
                     </label>
                     <input class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter Food">
                     <small id="emailHelp" class="form-text text-muted">
-                        <h3>Input name of your food item</h3>
                     </small>
                 </div>
                 <div class="form-group">
@@ -153,7 +152,9 @@
                 <button id='add' class="btn btn-info">Add</button>
                 <button id='todata' class="btn btn-info">See Expiration Dates</button>
                 <button id='scanbtn' class="btn btn-info">Scan/Stop</button>
-                <div id="scanner-container"></div>
+                <div id="scanner-container">
+                    <div id='bc'></div>
+                </div>
 
             </form>
 
@@ -164,7 +165,7 @@
 
         </div>
 
-        <div id='bc'></div>
+       
     </div>
 
     <footer>
