--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <footer>
         <div class="container-fluid">
-            <p>Frigi-Track</p>
+            <p><span style='color:black'>Frigi</span>---Track</p>
         </div>
     </footer>
 
